--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "language-es6",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "ES6 language support in Atom",
   "engines": {
-    "atom": "*",
-    "node": "*"
+    "atom": ">=0.50.0"
   },
   "homepage": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/atom/language-es6.git"
+    "url": "https://github.com/HeroicEric/atom-language-es6.git"
   },
   "license": "MIT",
   "bugs": {
