--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "language-es6",
   "version": "0.0.0",
+  "private": true,
   "description": "ES6 language support in Atom",
   "engines": {
-    "atom": ">=0.50.0"
+    "atom": "*"
   },
-  "homepage": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/HeroicEric/atom-language-es6.git"
+    "url": "https://github.com/atom/language-es6"
   },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/atom/language-es6/issues"
-  }
+  "license": "MIT"
 }
