--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/atom/language-es6"
+    "url": "https://github.com/heroiceric/atom-language-es6"
   },
   "license": "MIT"
 }
